@@ -1,4 +1,4 @@
-// Copyright 2006, 2007, 2009 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2006, 2007, 2009, 2011 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.dao;
 
 import java.sql.*;
@@ -9,7 +9,7 @@ import org.deltava.beans.acars.ACARSError;
 /**
  * A Data Access Object to load ACARS client error logs.
  * @author Luke
- * @version 2.6
+ * @version 4.1
  * @since 1.0
  */
 
@@ -31,15 +31,12 @@ public class GetACARSErrors extends DAO {
 	public Collection<Integer> getBuilds() throws DAOException {
 		try {
 			prepareStatement("SELECT DISTINCT CLIENT_BUILD FROM acars.ERRORS ORDER BY CLIENT_BUILD");
-			
-			// Execute the query
 			Collection<Integer> results = new ArrayList<Integer>();
-			ResultSet rs = _ps.executeQuery();
-			while (rs.next())
-				results.add(new Integer(rs.getInt(1)));
+			try (ResultSet rs = _ps.executeQuery()) {
+				while (rs.next())
+					results.add(Integer.valueOf(rs.getInt(1)));
+			}
 			
-			// Clean up and return
-			rs.close();
 			_ps.close();
 			return results;
 		} catch (SQLException se) {
@@ -55,15 +52,12 @@ public class GetACARSErrors extends DAO {
 	public Collection<Integer> getPilots() throws DAOException {
 		try {
 			prepareStatement("SELECT DISTINCT USERID FROM acars.ERRORS");
-			
-			// Execute the query
 			Collection<Integer> results = new ArrayList<Integer>();
-			ResultSet rs = _ps.executeQuery();
-			while (rs.next())
-				results.add(new Integer(rs.getInt(1)));
+			try (ResultSet rs = _ps.executeQuery()) {
+				while (rs.next())
+					results.add(Integer.valueOf(rs.getInt(1)));
+			}
 			
-			// Clean up and return
-			rs.close();
 			_ps.close();
 			return results;
 		} catch (SQLException se) {
@@ -141,27 +135,25 @@ public class GetACARSErrors extends DAO {
 	 */
 	private List<ACARSError> execute() throws SQLException {
 		List<ACARSError> results = new ArrayList<ACARSError>();
-		
-		// Execute the Query
-		ResultSet rs = _ps.executeQuery();
-		while (rs.next()) {
-			ACARSError err = new ACARSError(rs.getInt(2), rs.getString(10));
-			err.setID(rs.getInt(1));
-			err.setCreatedOn(rs.getTimestamp(3));
-			// skip #4, raw remote_addr
-			err.setRemoteHost(rs.getString(5));
-			err.setClientBuild(rs.getInt(6));
-			err.setBeta(rs.getInt(7));
-			err.setFSVersion(rs.getInt(8));
-			err.setFSUIPCVersion(rs.getString(9));
-			err.setStackDump(rs.getString(11));
-			err.setStateData(rs.getString(12));
-			err.setRemoteAddr(rs.getString(13));
-			results.add(err);
+		try (ResultSet rs = _ps.executeQuery()) {
+			while (rs.next()) {
+				ACARSError err = new ACARSError(rs.getInt(2), rs.getString(10));
+				err.setID(rs.getInt(1));
+				err.setCreatedOn(rs.getTimestamp(3));
+				// skip #4, raw remote_addr
+				err.setRemoteHost(rs.getString(5));
+				err.setClientBuild(rs.getInt(6));
+				err.setBeta(rs.getInt(7));
+				err.setFSVersion(rs.getInt(8));
+				err.setFSUIPCVersion(rs.getString(9));
+				err.setStackDump(rs.getString(11));
+				err.setStateData(rs.getString(12));
+				err.setRemoteAddr(rs.getString(13));
+				results.add(err);
+			}
 		}
 		
 		// Clean up and return
-		rs.close();
 		_ps.close();
 		return results;
 	}
